grammar/SQL457Parser.py
# Generated from ./SQL457.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SQL457Parser ( Parser ):

    grammarFileName = "SQL457.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "','", "')'", "'*'", "'.'", 
                     "'||'", "'/'", "'%'", "'+'", "'-'", "'<<'", "'>>'", 
                     "'&'", "'|'", "'<='", "'>='", "'=='", "'!='", "'<>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "'<'", "<INVALID>", "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "T_INT", "T_CHAR", "T_VARCHAR", "T_FLOAT", 
                      "K_COMMIT", "K_BEGIN", "K_TRANSACTION", "K_NOT", "K_NULL", 
                      "K_TRUE", "K_FALSE", "K_AND", "K_OR", "K_USE", "K_ADD", 
                      "K_SET", "K_ALTER", "K_CREATE", "K_DATABASE", "K_UPDATE", 
                      "K_DELETE", "K_DROP", "K_FROM", "K_INSERT", "K_INTO", 
                      "K_TABLE", "K_SELECT", "K_VALUES", "K_WHERE", "K_INNER", 
                      "K_OUTER", "K_JOIN", "K_LEFT", "K_RIGHT", "K_FULL", 
                      "K_ON", "EQUAL", "LESS_THAN", "LESS_THAN_EQUAL", "GREATER_THAN", 
                      "GREATER_THAN_EQUAL", "FLOAT", "INTEGER", "IDENTIFIER", 
                      "STRING_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACES" ]

    RULE_sqlStmtList = 0
    RULE_sqlStmt = 1
    RULE_createDatabaseStmt = 2
    RULE_dropDatabaseStmt = 3
    RULE_useStmt = 4
    RULE_createTableStmt = 5
    RULE_dropTableStmt = 6
    RULE_selectStmt = 7
    RULE_beginTransactionStmt = 8
    RULE_commitStmt = 9
    RULE_tableReference = 10
    RULE_tableSource = 11
    RULE_resultColumn = 12
    RULE_alterTableStmt = 13
    RULE_insertStmt = 14
    RULE_updateStmt = 15
    RULE_updateColumn = 16
    RULE_deleteStmt = 17
    RULE_columnDef = 18
    RULE_expr = 19
    RULE_columnSize = 20
    RULE_columnType = 21
    RULE_columnTypeArg = 22
    RULE_identifier = 23
    RULE_literalValue = 24
    RULE_literalInteger = 25
    RULE_literalFloat = 26
    RULE_literalString = 27
    RULE_literalNull = 28

    ruleNames =  [ "sqlStmtList", "sqlStmt", "createDatabaseStmt", "dropDatabaseStmt", 
                   "useStmt", "createTableStmt", "dropTableStmt", "selectStmt", 
                   "beginTransactionStmt", "commitStmt", "tableReference", 
                   "tableSource", "resultColumn", "alterTableStmt", "insertStmt", 
                   "updateStmt", "updateColumn", "deleteStmt", "columnDef", 
                   "expr", "columnSize", "columnType", "columnTypeArg", 
                   "identifier", "literalValue", "literalInteger", "literalFloat", 
                   "literalString", "literalNull" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T_INT=21
    T_CHAR=22
    T_VARCHAR=23
    T_FLOAT=24
    K_COMMIT=25
    K_BEGIN=26
    K_TRANSACTION=27
    K_NOT=28
    K_NULL=29
    K_TRUE=30
    K_FALSE=31
    K_AND=32
    K_OR=33
    K_USE=34
    K_ADD=35
    K_SET=36
    K_ALTER=37
    K_CREATE=38
    K_DATABASE=39
    K_UPDATE=40
    K_DELETE=41
    K_DROP=42
    K_FROM=43
    K_INSERT=44
    K_INTO=45
    K_TABLE=46
    K_SELECT=47
    K_VALUES=48
    K_WHERE=49
    K_INNER=50
    K_OUTER=51
    K_JOIN=52
    K_LEFT=53
    K_RIGHT=54
    K_FULL=55
    K_ON=56
    EQUAL=57
    LESS_THAN=58
    LESS_THAN_EQUAL=59
    GREATER_THAN=60
    GREATER_THAN_EQUAL=61
    FLOAT=62
    INTEGER=63
    IDENTIFIER=64
    STRING_LITERAL=65
    SINGLE_LINE_COMMENT=66
    MULTILINE_COMMENT=67
    SPACES=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SqlStmtListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sqlStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL457Parser.SqlStmtContext)
            else:
                return self.getTypedRuleContext(SQL457Parser.SqlStmtContext,i)


        def EOF(self):
            return self.getToken(SQL457Parser.EOF, 0)

        def getRuleIndex(self):
            return SQL457Parser.RULE_sqlStmtList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlStmtList" ):
                listener.enterSqlStmtList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlStmtList" ):
                listener.exitSqlStmtList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlStmtList" ):
                return visitor.visitSqlStmtList(self)
            else:
                return visitor.visitChildren(self)




    def sqlStmtList(self):

        localctx = SQL457Parser.SqlStmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sqlStmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.sqlStmt()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL457Parser.T__0:
                self.state = 59
                self.match(SQL457Parser.T__0)
                self.state = 60
                self.sqlStmt()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(SQL457Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SqlStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createDatabaseStmt(self):
            return self.getTypedRuleContext(SQL457Parser.CreateDatabaseStmtContext,0)


        def dropDatabaseStmt(self):
            return self.getTypedRuleContext(SQL457Parser.DropDatabaseStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(SQL457Parser.UseStmtContext,0)


        def createTableStmt(self):
            return self.getTypedRuleContext(SQL457Parser.CreateTableStmtContext,0)


        def dropTableStmt(self):
            return self.getTypedRuleContext(SQL457Parser.DropTableStmtContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(SQL457Parser.SelectStmtContext,0)


        def alterTableStmt(self):
            return self.getTypedRuleContext(SQL457Parser.AlterTableStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(SQL457Parser.InsertStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(SQL457Parser.UpdateStmtContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(SQL457Parser.DeleteStmtContext,0)


        def beginTransactionStmt(self):
            return self.getTypedRuleContext(SQL457Parser.BeginTransactionStmtContext,0)


        def commitStmt(self):
            return self.getTypedRuleContext(SQL457Parser.CommitStmtContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_sqlStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlStmt" ):
                listener.enterSqlStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlStmt" ):
                listener.exitSqlStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlStmt" ):
                return visitor.visitSqlStmt(self)
            else:
                return visitor.visitChildren(self)




    def sqlStmt(self):

        localctx = SQL457Parser.SqlStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sqlStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 68
                self.createDatabaseStmt()
                pass

            elif la_ == 2:
                self.state = 69
                self.dropDatabaseStmt()
                pass

            elif la_ == 3:
                self.state = 70
                self.useStmt()
                pass

            elif la_ == 4:
                self.state = 71
                self.createTableStmt()
                pass

            elif la_ == 5:
                self.state = 72
                self.dropTableStmt()
                pass

            elif la_ == 6:
                self.state = 73
                self.selectStmt()
                pass

            elif la_ == 7:
                self.state = 74
                self.alterTableStmt()
                pass

            elif la_ == 8:
                self.state = 75
                self.insertStmt()
                pass

            elif la_ == 9:
                self.state = 76
                self.updateStmt()
                pass

            elif la_ == 10:
                self.state = 77
                self.deleteStmt()
                pass

            elif la_ == 11:
                self.state = 78
                self.beginTransactionStmt()
                pass

            elif la_ == 12:
                self.state = 79
                self.commitStmt()
                pass

            elif la_ == 13:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CreateDatabaseStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_CREATE(self):
            return self.getToken(SQL457Parser.K_CREATE, 0)

        def K_DATABASE(self):
            return self.getToken(SQL457Parser.K_DATABASE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQL457Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_createDatabaseStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateDatabaseStmt" ):
                listener.enterCreateDatabaseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateDatabaseStmt" ):
                listener.exitCreateDatabaseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateDatabaseStmt" ):
                return visitor.visitCreateDatabaseStmt(self)
            else:
                return visitor.visitChildren(self)




    def createDatabaseStmt(self):

        localctx = SQL457Parser.CreateDatabaseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createDatabaseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SQL457Parser.K_CREATE)
            self.state = 84
            self.match(SQL457Parser.K_DATABASE)
            self.state = 85
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DropDatabaseStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_DROP(self):
            return self.getToken(SQL457Parser.K_DROP, 0)

        def K_DATABASE(self):
            return self.getToken(SQL457Parser.K_DATABASE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQL457Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_dropDatabaseStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropDatabaseStmt" ):
                listener.enterDropDatabaseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropDatabaseStmt" ):
                listener.exitDropDatabaseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropDatabaseStmt" ):
                return visitor.visitDropDatabaseStmt(self)
            else:
                return visitor.visitChildren(self)




    def dropDatabaseStmt(self):

        localctx = SQL457Parser.DropDatabaseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dropDatabaseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SQL457Parser.K_DROP)
            self.state = 88
            self.match(SQL457Parser.K_DATABASE)
            self.state = 89
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UseStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_USE(self):
            return self.getToken(SQL457Parser.K_USE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQL457Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_useStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseStmt" ):
                listener.enterUseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseStmt" ):
                listener.exitUseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = SQL457Parser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_useStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SQL457Parser.K_USE)
            self.state = 92
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CreateTableStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_CREATE(self):
            return self.getToken(SQL457Parser.K_CREATE, 0)

        def K_TABLE(self):
            return self.getToken(SQL457Parser.K_TABLE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQL457Parser.IdentifierContext,0)


        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL457Parser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SQL457Parser.ColumnDefContext,i)


        def getRuleIndex(self):
            return SQL457Parser.RULE_createTableStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTableStmt" ):
                listener.enterCreateTableStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTableStmt" ):
                listener.exitCreateTableStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTableStmt" ):
                return visitor.visitCreateTableStmt(self)
            else:
                return visitor.visitChildren(self)




    def createTableStmt(self):

        localctx = SQL457Parser.CreateTableStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_createTableStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SQL457Parser.K_CREATE)
            self.state = 95
            self.match(SQL457Parser.K_TABLE)
            self.state = 96
            self.identifier()
            self.state = 97
            self.match(SQL457Parser.T__1)
            self.state = 98
            self.columnDef()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL457Parser.T__2:
                self.state = 99
                self.match(SQL457Parser.T__2)
                self.state = 100
                self.columnDef()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(SQL457Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DropTableStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_DROP(self):
            return self.getToken(SQL457Parser.K_DROP, 0)

        def K_TABLE(self):
            return self.getToken(SQL457Parser.K_TABLE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQL457Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_dropTableStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropTableStmt" ):
                listener.enterDropTableStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropTableStmt" ):
                listener.exitDropTableStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropTableStmt" ):
                return visitor.visitDropTableStmt(self)
            else:
                return visitor.visitChildren(self)




    def dropTableStmt(self):

        localctx = SQL457Parser.DropTableStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dropTableStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SQL457Parser.K_DROP)
            self.state = 109
            self.match(SQL457Parser.K_TABLE)
            self.state = 110
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_SELECT(self):
            return self.getToken(SQL457Parser.K_SELECT, 0)

        def resultColumn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL457Parser.ResultColumnContext)
            else:
                return self.getTypedRuleContext(SQL457Parser.ResultColumnContext,i)


        def K_FROM(self):
            return self.getToken(SQL457Parser.K_FROM, 0)

        def tableSource(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQL457Parser.TableSourceContext)
            else:
                return self.getTypedRuleContext(SQL457Parser.TableSourceContext,i)


        def tableReference(self):
            return self.getTypedRuleContext(SQL457Parser.TableReferenceContext,0)


        def getRuleIndex(self):
            return SQL457Parser.RULE_selectStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmt" ):
                listener.enterSelectStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmt" ):
                listener.exitSelectStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectStmt" ):
                return visitor.visitSelectStmt(self)
            else:
                return visitor.visitChildren(self)




    def selectStmt(self):

        localctx = SQL457Parser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(SQL457Parser.K_SELECT)
            self.state = 113
            self.resultColumn()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQL457Parser.T__2:
                self.state = 114
                self.match(SQL457Parser.T__2)
                self.state = 115
                self.resultColumn()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQL457Parser.K_FROM:
                self.state = 121
                self.match(SQL457Parser.K_FROM)
                self.state = 122
                self.tableSource()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SQL457Parser.T__2:
                    self.state = 123
                    self.match(SQL457Parser.T__2)
                    self.state = 124
                    self.tableSource()
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 130
                self.tableReference()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BeginTransactionStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_BEGIN(self):
            return self.getToken(SQL457Parser.K_BEGIN, 0)

        def K_TRANSACTION(self):
            return self.getToken(SQL457Parser.K_TRANSACTION, 0)

        def getRuleIndex(self):
            return SQL457Parser.RULE_beginTransactionStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeginTransactionStmt" ):
                listener.enterBeginTransactionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeginTransactionStmt" ):
                listener.exitBeginTransactionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeginTransactionStmt" ):
                return visitor.visitBeginTransactionStmt(self)
            else:
                return visitor.visitChildren(self)




    def beginTransactionStmt(self):

        localctx = SQL457Parser.BeginTransactionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_beginTransactionStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(SQL457Parser.K_BEGIN)
            self.state = 135
            self.match(SQL457Parser.K_TRANSACTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommitStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_COMMIT(self):
            return self.getToken(SQL457Parser.K_COMMIT, 0)

        def getRuleIndex(self):
            return SQL457Parser.RULE_commitStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommitStmt" ):
                listener.enterCommitStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommitStmt" ):
                listener.exitCommitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommitStmt" ):
                return visitor.visitCommitStmt(self)
            else:
                return visitor.visitChildren(self)




    def commitStmt(self):

        localctx = SQL457Parser.CommitStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_commitStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(SQL457Parser.K_COMMIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TableReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQL457Parser.RULE_tableReference

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class JoinLeftOuterContext(TableReferenceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQL457Parser.TableReferenceContext
            super().__init__(parser)
            self.copyFrom(ctx)
